# SQLBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  Dockerfile  Dockerfile-base  LICENSE  README.md  docker-compose.yaml  sqlbot-assistant-demo.html  start.sh
backend/: .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  template.yaml
backend/alembic/: env.py
backend/alembic/versions/: 001_ddl.py  002_ddl_autogenerate.py  008_modify_field_type.py  010_modify_chat.py  010_upgrade_user_language.py  012_license_ddl.py  013_modify_chat.py  014_modify_chat_record.py  014_upgrade_user_language.py  015_modify_chat.py  016_modify_chat.py  017_rsa_ddl.py  018_modify_chat.py  019_upgrade_model.py  020_workspace_ddl.py  021_user_ws_ddl.py  022_assistant_ddl.py  023_modify_chat_record.py  024_modify_chat_record.py  025_ds_num.py  026_row_column_permission.py  027_modify_permission.py  028_ds_oid.py  029_modify_chat.py  030_permission_oid.py  031_modify_chat_record.py  032_modify_assistant_ddl.py  033_chat_origin_ddl.py  034_field_sort.py  034_permission_modify.py  035_sys_arg_ddl.py  036_modify_assistant.py  037_create_chat_log.py  038_remove_chat_record_cloumns.py  039_create_terminology.py  040_modify_ai_model.py  041_add_terminology_oid.py  042_data_training.py  043_modify_ds_id_type.py  044_table_relation.py  (+13 more)
backend/app/: utils.py
backend/app/api/routes/: login.py  users.py  utils.py
backend/apps/: api.py
backend/apps/ai_model/: embedding.py  model_factory.py
backend/apps/ai_model/openai/: llm.py
backend/apps/chat/api/: chat.py
backend/apps/chat/curd/: chat.py
backend/apps/chat/models/: chat_model.py
backend/apps/chat/schemas/: chat_base_schema.py  chat_schema.py  embedding.py  llm.py  m_schema.py  schema_engine.py  utils.py
backend/apps/chat/task/: llm.py
backend/apps/dashboard/api/: dashboard_api.py
backend/apps/dashboard/crud/: dashboard_service.py
backend/apps/dashboard/models/: dashboard_model.py
backend/apps/data_training/api/: data_training.py
backend/apps/data_training/curd/: data_training.py
backend/apps/data_training/models/: data_training_model.py
backend/apps/datasource/api/: datasource.py  export.py  table_relation.py
backend/apps/datasource/crud/: datasource.py  ds_embedding.py  field.py  permission.py  row_permission.py  table.py
backend/apps/datasource/embedding/: __init__.py  ds_embedding.py  table_embedding.py  utils.py
backend/apps/datasource/models/: datasource.py
backend/apps/datasource/utils/: utils.py
backend/apps/db/: constant.py  db.py  db_sql.py  engine.py  es_engine.py  type.py
backend/apps/mcp/: __init__.py  mcp.py
backend/apps/settings/api/: terminology.py
backend/apps/settings/models/: setting_models.py
backend/apps/settings/schemas/: setting_schemas.py
backend/apps/system/api/: aimodel.py  assistant.py  login.py  user.py  workspace.py
backend/apps/system/crud/: aimodel_manage.py  assistant.py  assistant_manage.py  user.py  workspace.py
backend/apps/system/middleware/: auth.py  token.py
backend/apps/system/models/: system_model.py  system_modle.py  user.py
backend/apps/system/schemas/: ai_model_schema.py  auth.py  system_schema.py
backend/apps/template/: template.py
backend/common/: error.py
backend/common/core/: config.py  db.py  deps.py  models.py  pagination.py  response_middleware.py  schemas.py  security.py  sqlbot_cache.py
backend/common/utils/: aes_crypto.py  crypto.py  embedding_threads.py  locale.py  random.py  snowflake.py  time.py  tree_utils.py  utils.py  whitelist.py
backend/locales/: en.json  ko-KR.json  zh-CN.json
backend/scripts/: format.sh
backend/scripts/alembic/: auto.sh
(+263 files in other folders)
